# nannou-creative-coding

./: .gitignore  AGENTS.md  Cargo.toml  README.md  tmp-browser-check.js  tmp-headless-qa.js  tmp-playwright-qa.js  tmp-qa-console.json  tmp-runweb-live.err  tmp-runweb-qa.err  tmp-runweb.err  tmp-web-fix-qa.js  tmp-web-fix-qa2.js  tmp-web-fix-qa3.js
.github/workflows/: export-github-pages.yml  perform-release.yml
rust/crates/hot-reload/: Cargo.toml  lib.rs
rust/crates/hot_reload/: Cargo.toml  build.rs  lib.rs
rust/crates/hot_reload/demo_01/: mod.rs
rust/crates/hot_reload/demo_02/: mod.rs
rust/crates/hot_reload/demo_03/: mod.rs
rust/crates/hot_reload/demo_04/: mod.rs
rust/crates/hot_reload/demo_05/: mod.rs
rust/crates/main/: Cargo.toml  main.rs  web.rs
rust/crates/mcp-server/: Cargo.toml  main.rs
rust/crates/mcp_server/: Cargo.toml  main.rs
rust/crates/web/: Cargo.toml  lib.rs
rust/patch/nannou_wgpu-0.19.0/: .cargo_vcs_info.json  Cargo.toml
rust/patch/nannou_wgpu-0.19.0/src/: lib.rs  render_pipeline_builder.rs
rust/patch/nannou_wgpu-0.19.0/src/texture/: capturer.rs  image.rs  mod.rs
rust/patch/noise-0.7.0/src/noise_fns/: generators.rs
rust/patch/noise-0.7.0/src/noise_fns/generators/: fractals.rs
rust/patch/noise-0.7.0/src/noise_fns/generators/fractals/: basicmulti.rs  billow.rs  fbm.rs  hybridmulti.rs  ridgedmulti.rs
scripts/: ExportGithubPages.ps1  IncreaseReleaseVersion.ps1  Install.ps1  Run.ps1  RunMcpServer.ps1  RunWithHotReload.ps1
scripts/main/: Install.ps1  RunDesktopWithHotReload.ps1
scripts/other/: ExportGithubPages.ps1  ExportWebRelease.ps1  IncreaseReleaseVersion.ps1  RunDesktop.ps1  RunMcpServer.ps1  RunWeb.ps1
src/: main.rs
