[package]
name = "hot_reload"
version = "0.1.3"
edition = "2021"

# Build as a normal Rust library by default. The desktop hot-reload script builds
# the native dynamic library explicitly so wasm builds do not request `dylib`.
[lib]
path = "lib.rs"
crate-type = ["rlib"]

[dependencies]
nannou = "0.19"
instant = "0.1"
