[package]
name = "nannou-creative-coding"
version = "0.1.2"
edition = "2021"

# Desktop runner binary for the hot-reloadable nannou sketches.
[[bin]]
name = "nannou-creative-coding"
path = "main.rs"

# WebAssembly entrypoint for running the same sketches in a browser.
[lib]
path = "web.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
hot_reload = { path = "../hot_reload" }
nannou = { version = "0.19", features = ["wasm-experimental"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Window"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hot-lib-reloader = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
