[package]
name = "nannou-creative-coding-mcp-server"
version = "0.1.2"
edition = "2021"

# Stdio MCP helper binary for read-only project tools.
[[bin]]
name = "nannou-creative-coding-mcp-server"
path = "main.rs"

[dependencies]
anyhow = "1"
rmcp = { version = "0.16", features = ["server", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
