[package]
name = "nannou-creative-coding-web"
version = "0.1.0"
edition = "2021"

# WebAssembly entrypoint for running the shared sketch code in a browser.
[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
hot_reload = { path = "../hot_reload" }
nannou = { version = "0.19", features = ["wasm-experimental"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Window"] }
